--- a/.github/workflows/build-docker-images.yml
+++ b/.github/workflows/build-docker-images.yml
@@ -21,7 +21,7 @@ jobs:
         name: Prepare
         id: prepare
         run: |
-          DOCKER_IMAGE=dutchcoders/transfer.sh
+          DOCKER_IMAGE=linuxuserin/transfer.me
           DOCKER_PLATFORMS=linux/amd64,linux/arm/v7,linux/arm64,linux/386
           VERSION=edge
 
