--- a/.github/workflows/build-docker-images.yml
+++ b/.github/workflows/build-docker-images.yml
@@ -1,12 +1,10 @@
 name: deploy multi-architecture Docker images for transfer.sh with buildx
 
 on:
-  schedule:
-    - cron: '0 0 0 * *' # everyday at midnight UTC     
   pull_request:
-    branches: master
+    branches: main
   push:
-    branches: master
+    branches: main
     tags:
       - v*
 
